--- a/style.css
+++ b/style.css
@@ -85,14 +85,22 @@ header{
     color: var(--secondary);
 }
 .fotos {
+    max-width: 600px;
     display: flex;
     flex-direction: column;
+    justify-content: end;
 }
 
 .portada {
     display: flex;
+    flex-direction: column;
     gap: var(--text-p);
     color: var(--secondary);
+}
+.portada__item {
+    display: inline-block;
+    flex-wrap: wrap;
+    color:#000000;
 }
 .index__nosotros {
     display: flex;
