--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -462,7 +462,7 @@ legend + * {
 
 ::file-selector-button {
   font: inherit;
-  -webkit-appearance: button;
+  -moz-animation-duration: button;
 }
 
 output {
