--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -374,12 +374,6 @@ select:disabled {
   display: none !important;
 }
 
-button,
-[type=button],
-[type=reset],
-[type=submit] {
-  -webkit-appearance: button;
-}
 button:not(:disabled),
 [type=button]:not(:disabled),
 [type=reset]:not(:disabled),
@@ -436,7 +430,6 @@ legend + * {
 
 [type=search] {
   outline-offset: -2px;
-  -webkit-appearance: textfield;
 }
 
 /* rtl:raw:
@@ -447,9 +440,6 @@ legend + * {
   direction: ltr;
 }
 */
-::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
 
 ::-webkit-color-swatch-wrapper {
   padding: 0;
@@ -457,12 +447,10 @@ legend + * {
 
 ::-webkit-file-upload-button {
   font: inherit;
-  -webkit-appearance: button;
 }
 
 ::file-selector-button {
   font: inherit;
-  -moz-animation-duration: button;
 }
 
 output {
@@ -2271,7 +2259,7 @@ textarea.form-control-lg {
   -moz-appearance: none;
   appearance: none;
   -webkit-print-color-adjust: exact;
-  color-adjust: exact;
+  accent-color: exact;
   print-color-adjust: exact;
 }
 .form-check-input[type=checkbox] {
