--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: content-box;
 }
-
 :root{
     --primary: #FCB900;
     --secondary: #FFFFFF;
@@ -13,13 +12,14 @@
 
     --text-h: 4.8em;
     --text-p: 1.2em;
-
 }
-
 html{
     font-size: 62.5%;
 }
-
+header{
+    padding: 12px 36px;
+    background-color: #3A3A3A;
+}
 body{
     font-family: 'Open Sans', sans-serif;
     font-size: var(--text-p);
@@ -30,36 +30,27 @@ a{
     text-decoration: none;
     color: var(--secondary);
 }
-
-
 ul{
     list-style-type: none;
 }
 
-header{
-    padding: 12px 36px;
-    background-color: #3A3A3A;
-}
 
 /* CLASS */
-
+/* 
 .container{
     max-width: 1200px;
     margin: 0 auto;
-}
-
+} */
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
-
 .navbar .navbar__link {
     display: block;
     max-width: 480px; 
     transition: all .3s ease-in-out;   
 }
-
 .navbar .menu {
     display: flex;
     flex-wrap: wrap;
