--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,6 @@ ul{
     font-style: italic var(--thirty-n);
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: flex-end;
 }
