--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ ul{
     max-width: 600px;
 }
 .escudos__noticias {
-    max-width: 100rem;
-    max-height: 25rem;  
+    max-width: 1200px;
+    max-height: 250px;  
 }
 .fondo__negro {
     background-color: var(--nav-pri);
@@ -103,6 +103,7 @@ ul{
     display: flex;
     justify-content: center;
 }
+
 
 /* FOOTER */
 
