--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,700;1,500&display=swap');
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans);
 
 *{
     margin: 0;
@@ -131,28 +132,100 @@ ul{
 }   
 
 
-form {
-    /* Centrar el formulario en la página */
-    margin: 0 auto;
-    width: 400px;
-    /* Esquema del formulario */
-    padding: 1em;
-    border: 1px solid #CCC;
-    border-radius: 1em;
-  }
-  input,
-textarea {
-    width: 300px;
-    box-sizing: border-box;
-    border: 1px solid #999;
+.contact_form{	
+	width: 460px; 
+  height: auto;
+  margin: 20px auto;
+	border-radius: 10px;  
+	padding-top: 30px;
+	padding-bottom: 20px;  
+  background-color: #fbfbfb; 
+  padding-left: 30px; 
 }
-textarea {
-    vertical-align: top;
-    height: 5em;
+input{
+	background-color: #fbfbfb; 
+	width: 408px; 
+	height: 40px; 
+	border-radius: 5px;  
+	border-style: solid; 
+	border-width: 1px; 
+	border-color: #3a3a3a; 
+	margin-top: 10px;  
+	padding-left: 10px;
+  margin-bottom: 20px; 
 }
+
+
+textarea{
+  background-color: #fbfbfb; 
+	width: 405px; 
+	height: 150px; 
+	border-radius: 5px;  
+	border-style: solid; 
+	border-width: 1px; 
+	border-color: #3a3a3a; 
+	margin-top: 10px;  
+	padding-left: 10px;
+  margin-bottom: 20px; 
+  padding-top: 15px; 
+}
+
+
+label{
+  display: block; 
+	float: center; 	
+}
+
+
 button{
-    margin-left: .5em;
+	height: 45px; 
+	padding-left: 5px;
+	padding-right: 5px; 	
+	margin-bottom: 20px; 
+	margin-top: 10px; 	
+	text-transform: uppercase;
+	background-color: #3a3a3a; 
+	border-color: #3a3a3a; 
+	border-style: solid; 
+	border-radius: 10px;	
+	width: 420px;   
+  cursor: pointer;
 }
+
+
+button p{
+	color: #fff; 
+}
+
+
+span{
+	color: #3a3a3a; 
+}
+
+
+.aviso{
+	font-size: 13px;  
+	color: #0e0e0e;  
+}
+::-webkit-input-placeholder {
+    color: #a8a8a8;
+}
+   
+   
+::-webkit-textarea-placeholder {
+   color: #a8a8a8;
+}
+.formulario input:focus{
+	outline:0;
+	border: 1px solid #FCB900;
+}
+
+
+.formulario textarea:focus{
+	outline:0;
+	border: 1px solid #FCB900;
+}
+
 
 
 /* FOOTER */
