--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ ul{
     display: block;
     max-width: 600px; 
     transition: all .3s ease-in;   
-    border-radius: 12px;
+    border-radius: 2.5rem;
 }
 .navbar .menu {
     display: flex;
@@ -225,8 +225,6 @@ span{
 	outline:0;
 	border: 1px solid #FCB900;
 }
-
-
 
 /* FOOTER */
 
